[package]
name = "matcha"
version = "0.0.0"
description = "I hate coffee."
authors = ["Kyza"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["api-all", "devtools", "global-shortcut", "macos-private-api"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rdev = { version = "0.5.2", features = ["unstable_grab", "serialize"] }
home = "0.5.4"
libloading = "0.8"
phf = { version = "0.11", features = ["macros"] }
once_cell = "1.17.1"
base64 = "0.21.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
